# cgp_lex

./: README.md  analysis.R  analysis_best_current.R  analysis_best_overall.R  analysis_n_nodes.R  coins_segmentation_lexicase.py  install.sh  test_install.ipynb
data/test_install/: META.json  dataset.csv
env/kartezio-env-38/: pyvenv.cfg
results/: overall_best_Best.txt  overall_best_lexicase.txt
results/cgp/: rep_0G100.json  rep_0G1000.json  rep_0G10000.json  rep_0G10100.json  rep_0G10200.json  rep_0G10300.json  rep_0G10400.json  rep_0G10500.json  rep_0G10600.json  rep_0G10700.json  rep_0G10800.json  rep_0G10900.json  rep_0G1100.json  rep_0G11000.json  rep_0G11100.json  rep_0G11200.json  rep_0G11300.json  rep_0G11400.json  rep_0G11500.json  rep_0G11600.json  rep_0G11700.json  rep_0G11800.json  rep_0G11900.json  rep_0G1200.json  rep_0G12000.json  rep_0G12100.json  rep_0G12200.json  rep_0G12300.json  rep_0G12400.json  rep_0G12500.json  rep_0G12600.json  rep_0G12700.json  rep_0G12800.json  rep_0G12900.json  rep_0G1300.json  rep_0G13000.json  rep_0G13100.json  rep_0G13200.json  rep_0G13300.json  rep_0G13400.json  (+2188 more)
results/cgp_lexicase/: rep_0G100.json  rep_0G1000.json  rep_0G10000.json  rep_0G10100.json  rep_0G10200.json  rep_0G10300.json  (+2406 more)
sources/Kartezio/: README.md  setup.cfg
sources/Kartezio/src/kartezio/: metric.py  stacker.py
sources/Kartezio/src/kartezio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sources/Kartezio/src/kartezio/cli/: movie.py
sources/Kartezio/src/kartezio/model/: base.py  components.py  evolution.py
