[metadata]
name = kartezio
version = 0.9.9
description = Python Package to create modular CGP models
long_description = file: README.md
long_description_content_type = text/markdown
author = Kevin Cortacero
author_email = kevin.cortacero@inserm.fr
maintainer = Kevin Cortacero
maintainer_email = kevin.cortacero@inserm.fr
license = MIT
license_file = LICENSE
platforms = any
requires-python = >=3.7
classifiers =
    Programming Language :: Python :: 3.7
keywords = genetic algorithm, machine learning, segmentation, computer vision
project_urls =
    Source=https://github.com/MicroMedIAn/Kartezio
    Tracker=https://github.com/MicroMedIAn/Kartezio/issues


[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    scipy
    scikit-image
    matplotlib
    numba
    numena
    seaborn
    umap-learn
    scikit-learn


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kartezio-dataset = kartezio.cli.dataset:main
    kartezio-pack = kartezio.cli.pack:main
    kartezio-graph = kartezio.cli.graph:main
    kartezio-insight = kartezio.cli.insight:main
